<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.EnterOtpFragment">

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:hint="@string/otp_view"
        android:itemBackground="@drawable/pinview_background"
        android:lineHeight="15dp"
        android:textColor="@color/black"
        app:itemCount="6"
        app:itemRadius="15dp"
        app:itemSpacing="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431"
        app:lineColor="#D6D6D6"
        app:viewType="rectangle"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="340dp"
        android:layout_height="49dp"
        android:background="@drawable/edittext_style"
        android:text="@string/verify_and_continue"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/codeSent"
        android:layout_width="282dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/code_is_sent_to_the_number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pinView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/didn_t_get_code"
        android:textSize="17sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinView" />

    <TextView
        android:id="@+id/resendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/send_it_again"
        android:textColor="@color/yellow_200"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>